--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,9 @@
-@import 'tailwindcss';
+@import "tailwindcss";
+@import "fumadocs-ui/css/neutral.css";
+@import "fumadocs-ui/css/preset.css";
+
+/* path of `fumadocs-ui` relative to the CSS file */
+@source '../node_modules/fumadocs-ui/dist/**/*.js';
 
 @plugin 'tailwindcss-animate';
 
@@ -159,7 +164,7 @@
 }
 
 .form {
-  background-color: #EAFAEA;
+  background-color: #eafaea;
 }
 
 /*
